CHANGES for Netcdf-Java library
Version @VERSION.MINOR@
Build Date = @BUILDTIME@

Changes in version 4.2:
 22: (2011-03-10)
  All maven versions are 4.2.22
  Uspln iosp: ensure we are correctly interpreting GLN data as extended format.
  Nexrad2 iosp: hi-res bug
  Default TableAnalyser: turn into trajectory if there is trajectory metadata (record dimension case)
  igra iosp (alpha)
  H5header: remove symbolic links in same dir as regular object
  GradsBinaryGridServiceProvider (don)

 21: (2011-03-02)
  various opendap problems are fixed
  ghcnm iosp (beta)
 20: (2011-02-16)
  GRIB: Deal with zero length index better
  Default TableAnalyser: turn into trajectory if there is trajectory metadata
  DatasetCollectionManager is not activated if there is no scan
  N3header: check for one record variable, no-padding case.
  URLnaming.escapeQuery() reverted to old way of checking for query string
  CompositePointCollection.getDataVariables() : check for null
  ParsedSectionSpec: check for illegal ranges
  Variable: null unit string bug
  GridHorizCoordSys: allow gaussian lats NP != NY
 19: (2011-02-01)
  Nexrad2: dual pole radar offset bug
  H4header: workaround for bad hdf4 
  HTTPClient refactor / framework
  opendap bison parser
  CSMConvention looks for date and time units
  H5header.showBytes() -> Misc
  GridPointWriter fix from Don
  ToolsUI: GribReportPanel
  NcStreamGrammer version 1
  cdmRemote sequences, getStructureIterator
  IospHelper.makeArrayBB
  ncstream was relying on assert to be enabled (!)
  TableAnalyser CdmDirect added
  StructureData.convertScalarLong() added
  StructureDataComposite use member lookup by name (!)
  NCdumpW.printArray() had ArrayStructure before ArraySequence (!)
  DefaultConventions uses short name
 18: (2010-12-23)
  N4: vlen not setting byteOrder
  ncss bug when time subsetting FMRC datasets - time_run axis was not getting subsetted.
  MetadataManager.closeAll() bug
  GridDatasetInv looks for run time inside file if needed.